# singularity-rstudio

./: CHANGELOG.md  FAQ.md  README.md  slurm-singularity-exec.md
.github/actions/singularity/: action.yml
.github/workflows/: publish.yml
data/: 3.8.5.lua
data/centos7/: r-session-complete.sdef
data/connect/: connect.docker  docker-compose.yml  rstudio-connect.gcfg
data/examples/: R.centos7.sdef  R.focal.sdef  README.md
data/examples/batchtools/: README.md
data/examples/clustermq/: README.md
data/r-session-complete/: build.env  docker-compose.yml
data/r-session-complete/bionic/: r-session-complete.sdef
data/r-session-complete/centos7/: Dockerfile  r-session-complete.sdef
data/r-session-complete/focal/: Dockerfile  r-session-complete.sdef
data/r-session-complete/jammy/: Dockerfile  r-session-complete.sdef
data/r-session-complete/noble/: Dockerfile  r-session-complete.sdef
data/r-session-complete/rhel10/: Dockerfile  r-session-complete.sdef
data/r-session-complete/rhel8/: Dockerfile  r-session-complete.sdef
data/r-session-complete/rhel9/: Dockerfile  r-session-complete.sdef
data/r-session-complete/rockylinux10/: Dockerfile  Dockerfile-i  Dockerfile.nvs  install-slurm.sh  r-session-complete.sdef  r-session-complete.sdef-i
data/r-session-complete/rockylinux8/: Dockerfile  r-session-complete.sdef
data/r-session-complete/rockylinux9/: Dockerfile  r-session-complete.sdef
data/r-session-complete/scripts/: bioc.txt  install-apptainer.sh  install-pro-driver.sh  rhn.sh  (+7 more)
data/ubuntu2004/: r-session-complete.sdef
data/workbench/: docker-compose.yml  start-wb  workbench.docker
slurm-singularity-exec/: CMakeLists.txt  Makefile  README.md  main.cpp  singularity-exec.conf.in  singularity-exec.conf.tmpl  slurm-singularity-wrapper.sh
(+24 files in other folders)
